--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
 	<artifactId>netconf4j</artifactId>
 	<groupId>net.i2cat.netconf</groupId>
-	<version>0.0.3</version>
-	<packaging>bundle</packaging>
+	<version>0.0.4-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<modelVersion>4.0.0</modelVersion>
 
 	<organization>
